--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 application.storageLocation=~/.sepm
-spring.datasource.url=jdbc:h2:file:${application.storageLocation}/database/sepm;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sepm
-spring.datasource.password=sepm
+application.fileService.storageLocation=${application.storageLocation}/images
+
+spring.datasource.url=jdbc:h2:file:${application.storageLocation}/database/sepm;MODE=PostgreSQL;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sepm-user
+spring.datasource.password=sepm-password
+
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.validator.apply_to_ddl=false
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/
+
 logging.level.root=warn
 logging.level.at.ac.tuwien.sepm.individual.assignment.vehiclerental=debug
-fileService.storageLocation=${application.storageLocation}/images
