--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <kotlin.version>1.2.30</kotlin.version>
         <h2.version>1.4.196</h2.version>
         <moneta.version>1.1</moneta.version>
+        <usertype.core.version>7.0.0.CR1</usertype.core.version>
+        <commons-validator.version>1.6</commons-validator.version>
+        <kotlin-logging.version>1.4.9</kotlin-logging.version>
     </properties>
 
     <dependencies>
@@ -52,7 +55,12 @@
         <dependency>
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
-            <version>7.0.0.CR1</version>
+            <version>${usertype.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>${commons-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -61,7 +69,7 @@
         <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging</artifactId>
-            <version>1.4.9</version>
+            <version>${kotlin-logging.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
