--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 application.storageLocation=~/.sepm
 application.fileService.storageLocation=${application.storageLocation}/images
 
-spring.datasource.url=jdbc:h2:file:${application.storageLocation}/database/sepm;MODE=PostgreSQL;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:${application.storageLocation}/database/sepm;MODE=PostgreSQL;DB_CLOSE_ON_EXIT=FALSE;FILE_LOCK=NO
 spring.datasource.username=sepm-user
 spring.datasource.password=sepm-password
 
